change transaction-list to lobby

--- a/views/transaction/create.ejs
+++ b/views/transaction/create.ejs
@@ -44,7 +44,7 @@
 					success: function (data) {
 					    if(data.code==200) {
 						    fade('Application Sent')
-						    window.location.href="/transaction-list"
+						    window.location.href="/lobby"
 					    } else {
 							$('input').val('')
 						    fade('Application Failed')
