--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -33,7 +33,7 @@
 					    if(data.code==200) {
 						    fade('Login Success')
 						    setTimeout(()=>{
-							    window.location.href = "/transaction-list"
+							    window.location.href = "/lobby"
 						    },1500)	               	
 					    } else {
 							$('input').val('')
