--- a/views/transaction/lobby.ejs
+++ b/views/transaction/lobby.ejs
@@ -2,6 +2,9 @@
 	<div class="container">
 		<ul>
 			<li>
+				<a href="helper"><h1>Create Rachet Account</h1></a>
+			</li>
+			<li>
 				<a href="snapshoot"><h1>Exchange Snapshots</h1></a>
 			</li>
 			<li>
