--- a/views/transaction/lobby.ejs
+++ b/views/transaction/lobby.ejs
@@ -2,22 +2,22 @@
 	<div class="container">
 		<ul>
 			<li>
-				<a href="helper"><h1>Create Rachet Account</h1></a>
+				<a href="helper"><h1>创建辅助账号</h1></a>
 			</li>
 			<li>
-				<a href="snapshoot"><h1>Exchange Snapshots</h1></a>
+				<a href="snapshoot"><h1>交换快照</h1></a>
 			</li>
 			<li>
-				<a href="ratchet"><h1>Exchange Rachet Tx</h1></a>
+				<a href="ratchet"><h1>交换齿轮事务</h1></a>
 			</li>
 			<li>
-				<a href="create"><h1>Open Payment Channel</h1></a>
+				<a href="create"><h1>申请建立支付通道</h1></a>
 			</li>
 			<li>
-				<a href="javascript:;"><h1>Transact</h1></a>
+				<a href="javascript:;"><h1>交易</h1></a>
 			</li>
 			<li>
-				<a href="javascript:;"><h1>Close the Channel</h1></a>
+				<a href="javascript:;"><h1>关闭通道</h1></a>
 			</li>
 		</ul>
 	</div>
