--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -2,12 +2,12 @@
 	<div class="container">
 		<form class="form create" method="post ">
 			<div>
-				<label>用户名：</label> 
-				<input placeholder="用户名" type="text" name="name" value="alice" readonly="readonly">
+				<label>Name：</label>
+				<input placeholder="请输入用户名" type="text" name="name" />
 			</div>
 			<div>
-				<label>密码：</label> 
-				<input placeholder="密码" type="password" name="password">
+				<label>Stellar地址：</label>
+				<textarea style="padding-right:5px;" name="secret"></textarea>
 			</div>
 			<div class="submit">登录</div>
 		</form>		
@@ -19,8 +19,10 @@
 			}
 		})
 		$('.submit').click(()=>{
-			if ($('input[name=name]').val().trim() == '' || $('input[name=password]').val().trim() == '' ) {
-				fade('请输入用户名或密码')
+			if ($('input[name=name]').val().trim() == '') {
+				fade('请输入用户名！')
+			} else if ($('textarea[name=secret]').val().trim() == '') {
+				fade('请输入Stellar地址！')
 			} else {
 				console.log($('.form').serialize())
 				$.ajax({
