create channel list

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -35,7 +35,7 @@
 					    if(data.code==200) {
 						    fade('登录成功')
 						    setTimeout(()=>{
-							    window.location.href = "/lobby"
+							    window.location.href = "/channel-list"
 						    },1500)	               	
 					    } else {
 							$('input').val('')
