--- a/views/channel/channel-list.ejs
+++ b/views/channel/channel-list.ejs
@@ -1,16 +1,20 @@
 <%- include("../layouts/head",{type:'channel'}) %>
+	<a href="/channel-create"><div class="submit" style="width:auto;float: initial;">点击创建新通道</div></a>
 	<h1 style="text-align: center;">
 		通道列表
 	</h1>
 	<div class="container">
 		<ul class="posts">
-			<li>
-				<a href="123">
-					<div class="title">
-						测试通道1
-					</div>
-				</a>
-			</li>
+			<% list.forEach (function(res) { %>
+				<li>
+					<a href="/channel-details/<%= res.channel_id %>">
+						<div class="title">
+							<%= res.channel_name %>
+							<span style="height: 26px;background: <%= res.channel_status==1?"#5FB878":"red" %>;width: 26px;border-radius: 50%;"></span>
+						</div>
+					</a>
+				</li>
+			<% }) %>
 		</ul>
 		<div style="margin-top: 30px" class="pagination" id="page"></div>	
 	</div>
@@ -18,7 +22,7 @@
 	<script>
 		pagination({
 			selector: '#page',
-			totalPage: 1,
+			totalPage: <%= countPage %>,
 			currentPage: 1,
 			prev: '上一页',
 			next: '下一页',
@@ -27,16 +31,34 @@
 			showTotalPage: true,
 			count: 2//当前页前后显示的数量
 		}, function(val) {
-			// 当前页
 			$.ajax({
-				url : "list",
+				url : "channel-list",
 				type : 'POST',
 				data : {
 					page : val
 				},
 				cache : false,
 				success: function (data) {
-
+					if (data != 'error') {
+						$('.posts').html(' ')
+						$.each(data,function(i,val){
+							var status = '<span style="height: 26px;background: ' 
+							status += val.channel_status==1?"#5FB878":"red"
+							status += ';width: 26px;border-radius: 50%;"></span>';
+							console.log(status)
+							$('.posts').append(
+								'<li>'+
+									'<a href="/channel-details/'+ val.channel_id +'">'+
+										'<div class="title">'+
+											val.channel_name + status +
+										'</div>'+
+									'</a>'+
+								'</li>'
+							)
+						})
+					} else {
+						fend('分页不存在')
+					}
 				}
 			})
 		})
