--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 	<meta charset="UTF-8">
+
 	<title>test</title>
+
 	<link rel="stylesheet" href="/css/index.css">
+
 	<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 		function fade(txt){
@@ -39,8 +43,11 @@
 			})
 		})
 	</script>
+	
 </head>
+
 <body>
+
 	<header>
 
 		<div class="user_name">
@@ -51,14 +58,16 @@
 				欢迎注册登录^_^
 			<% } %>
 		</div>
+
 		<div class="message">登录成功</div>
+
 		<div class="user_right">
 			<%  if (session.name) { %>
 				<div class="has_user">
 					<% if (type == 'channel') { %>
-						<a class="active" href="/channel">支付通道</a>
+						<a class="active" href="/channel-list">支付通道</a>
 					<% } else { %>
-						<a href="/channel">支付通道</a>
+						<a href="/channel-list">支付通道</a>
 					<% } %>
 					<% if (type == 'message') { %>
 						<a class="active" href="/message">我的消息</a>
@@ -68,6 +77,7 @@
 					<span class="logout">退出</span>
 				</div>
 			<% } %>
+
 			<% if (!session.name) { %>
 				<div class="none_user has_user">
 					<% if (type == 'register') { %>
@@ -83,5 +93,5 @@
 				</div>
 			<% } %>
 		</div>
-		
+
 	</header>
