--- a/views/channel/channel-invite-create.ejs
+++ b/views/channel/channel-invite-create.ejs
@@ -7,7 +7,7 @@
 			</div>
 			<div>
 				<label>存入数量：</label>
-                <input placeholder="请输入存入数量" type="text" name="amount" />
+                <input placeholder="请输入存入数量" type="text" value="0" min="0" max="9999" name="amount" />
             </div>
             <div>
 				<label>对方存入数量：<%= channelData.channel_sponsor_deposit %></label>
@@ -15,38 +15,50 @@
 			<div>
 				<label>对方名称：<%= toUserData.user_name %></label>
 			</div>
-			<div class="submit">确定</div>
-		</form>		
+			<input type="hidden" name="type" value="0" />
+			<div class="submit">接收</div>
+			<div class="refuse">拒绝</div>
+		</form>
 	</div>
 	<script>
+		$('.refuse').click(()=>{
+			console.log(123)
+			$('input[name=type]').val(1)
+			$('.submit').click()
+			return false;
+		})
 		$(window).keyup(function(e) {
 			if (e.keyCode == 13) {
 				$('.submit').click()
 			}
 		})
 		$('.submit').click(()=>{
-			if ($('input[name=amount]').val().trim() == '' || $('input[name=amount]').val()<1) {
-				fade('请输入存入数量,并且为正整数')
-			} else {
-				$.ajax({
-					url: "/channel-invite-create/<%= channelData.channel_id %>",
-					data: $('.form').serialize(),
-					type: "POST",
-					cache: false,
-					dataType: 'json',
-					success: function (data) {
-					    if(data.code==200) {
-							fade('成功')
-							window.location.href = "/channel-details/<%= channelData.channel_id %>"
-					    } else {
-						    fade(data.message)
-					    }
-					},
-					error: function () {
-						fade('异常')
-					}
-				})			
+			if ($('input[name=type]').val()==0) {
+				if ($('input[name=amount]').val().trim() == '' || $('input[name=amount]').val()<1) {
+					fade('请输入存入数量,并且为正整数')
+					return false;
+				}
 			}
+			$.ajax({
+				url: "/channel-invite-create/<%= channelData.channel_id %>",
+				data: $('.form').serialize(),
+				type: "POST",
+				cache: false,
+				dataType: 'json',
+				success: function (data) {
+					if(data.code==200) {
+						fade('成功')
+						setTimeout(function() {
+							window.location.href = "/channel-details/<%= channelData.channel_id %>"
+						}, 1000)
+					} else {
+						fade(data.message)
+					}
+				},
+				error: function () {
+					fade('异常')
+				}
+			})
 		})		
 	</script>
 <% include ../layouts/foot %>
