--- a/views/message/message-list.ejs
+++ b/views/message/message-list.ejs
@@ -16,6 +16,9 @@
 									case 1 :
 										var type = "账户交易";
 										break;
+									case 2 :
+										var type = "通道交易";
+										break;
 									default:
 										var type = "异常";
 								}
@@ -66,6 +69,9 @@
 									break;
 								case 1:
 									type = "账户交易";
+									break;
+								case 2:
+									type = "通道交易";
 									break;
 								default:
 									type = "异常";
