--- a/views/wallet/wallet.ejs
+++ b/views/wallet/wallet.ejs
@@ -19,7 +19,7 @@
             </div>
 			<div class="submit">确定</div>
         </form>
-        <h3 style="text-align: center;margin-top: 100px;">历史记录</h3>
+        <h3 style="text-align: center;margin-top: 100px;">钱包交易记录</h3>
         <ul class="posts" style="width: 50%;margin: 0 auto;margin-top: 10px;">
 			<% list.forEach (function(res) { %>
 				<%
