--- a/views/channel/channel-details.ejs
+++ b/views/channel/channel-details.ejs
@@ -138,7 +138,10 @@
 				type: "POST",
 				dataType: 'json',
 				success: function (data) {
-					fade('测试')
+					fade('通道关闭')
+					setTimeout(function() {
+						location.reload();
+					}, 1000)
 				},
 				error: function () {
 					fade('异常')
